# IT_OOP_Game_2021

./: .gitignore  CMakeLists.txt
KUDA/: CMakeLists.txt
KUDA/include/: KUDA.h
KUDA/include/KUDA/: IController.h  IMap.h  actor.h  camera.h  lightingAnalyzer.h  menuRenderer.h  pawn.h  pawnController.h  ray.h  raycasting2DRenderer.h  raycastingRenderer.h  rectangle.h  renderer.h  renderer3D.h  scene.h  sceneRenderer.h  simple2DRenderer.h  textureAtlas.h  wallSpriteFactory.h  window.h
KUDA/src/: actor.cpp  camera.cpp  lightingAnalyzer.cpp  menuRenderer.cpp  pawn.cpp  pawnController.cpp  ray.cpp  raycasting2DRenderer.cpp  raycastingRenderer.cpp  renderer.cpp  renderer3D.cpp  sceneRenderer.cpp  simple2DRenderer.cpp  textureAtlas.cpp  wallSpriteFactory.cpp  window.cpp
game/: CMakeLists.txt
game/include/: IPathFinder.h  IPickupAction.h  damageAction.h  enemy.h  enemyController.h  game.h  gameObject.h  gameObjectController.h  healAction.h  map.h  pickUpAmmoAction.h  pickUpWeaponAction.h  pickup.h  pickupController.h  pistol.h  player.h  playerController.h  projectileController.h  shotgun.h  weapon.h
game/src/: damageAction.cpp  enemy.cpp  enemyController.cpp  game.cpp  gameObject.cpp  gameObjectController.cpp  healAction.cpp  main.cpp  map.cpp  pickUpAmmoAction.cpp  pickUpWeaponAction.cpp  pickup.cpp  pickupController.cpp  pistol.cpp  player.cpp  playerController.cpp  projectileController.cpp  shotgun.cpp  weapon.cpp
game/tests/: TestGame.cpp  TestSettings.cpp  player.cpp  weapons.cpp
